# giswater-api

./: .dockerignore  .env.example  .env.prod.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.override.yml.example  docker-compose.traefik.yml  docker-compose.yml  gunicorn.conf.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
.cursor/rules/: run-tests.mdc
.github/workflows/: docker-publish.yml  flake8.yml  lint-flake8.yml  lint-ruff.yml  test.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_gwapi_initial.py  0002_log_tables.py  0003_log_partition_names.py
app/: auth.py  auth_constants.py  config.py  constants.py  database.py  dependencies.py  exceptions.py  giswater_version.py  gwapi_users.py  host_middleware.py  keycloak.py  logging.py  main.py  schemas.py  state.py  tenant.py  tenant_middleware.py  utils.py
deploy/: .env.prod.example  README.md  docker-compose.yml  docker-entrypoint.sh  install.sh  main.env.example  nginx.conf.example
docs/: ARCHITECTURE.md  DATABASE_MIGRATIONS.md  DEPLOYMENT_CHECKLIST.md  ENVIRONMENT_VARIABLES.md  VERSIONING.md
plugins/: readme.md
scripts/: release.ps1  release.sh  smoke_test.sh  test_local.sh
tests/: conftest.py  helpers.py  test_alembic_dir.py  test_api_root.py  test_auth.py  test_auth_smoke.py  test_basic.py  test_cli_smoke.py  test_crm.py  test_db_migrations.py  test_epa_dscenario.py  test_giswater_version.py  test_main.py  test_mapzones.py  test_om.py  test_operability.py  test_routing.py  test_single_tenant_routing.py
(+147 files in other folders)
