[project]
name = "giswater-api"
version = "0.7.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.7",
    "uvicorn==0.34.0",
    "gunicorn==23.0.0",
    "pydantic==2.10.6",
    "pydantic-geojson==0.2.0",
    "httpx==0.28.1",
    "psycopg[binary,pool]",
    "requests==2.32.4",
    "pyproj==3.7.1",
    "pyjwt[crypto]==2.10.1",
    "cryptography==46.0.3",
    "fastapi-keycloak==1.1.1",
    "python-dotenv==1.2.1",
]

[project.optional-dependencies]
dev = ["pytest==8.3.4", "ruff"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
exclude = [
    "__pycache__",
    ".git",
    ".venv",
    ".pytest_cache",
    ".idea",
]
line-length = 120

[tool.ruff.lint]
select = ["E2", "E3", "E4", "E7", "E9", "N8", "C90", "F", "B", "Q"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-bugbear]
# FastAPI uses these in function defaults for dependency injection.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Form",
    "fastapi.File",
    "Depends",
    "Query",
    "Path",
    "Body",
    "Header",
    "Form",
    "File",
]

[tool.ruff.lint.per-file-ignores]
# Pydantic models use camelCase for JSON serialization.
"app/models/*.py" = ["N815"]
"app/models/**/*.py" = ["N815"]
